# document-ai

./: .gitignore  README.md  justfile  pyproject.toml
data/: duck.db
migrations/: 0_create_tables.sql
notebooks/: deepseek-ocr2.ipynb
src/document_ai/: __init__.py  settings.py
src/document_ai/application/: document.py  parse.py
src/document_ai/application/core/utils/: pdf2image.py
src/document_ai/application/ports/: database.py  docsource.py  parser.py  storage.py
src/document_ai/domain/: document.py
src/document_ai/infrastructure/: database.py  docsource.py  parser.py  storage.py
src/document_ai/infrastructure/schemas/: database.py  docsource.py
src/document_ai/interface/: dependencies.py  entrypoints.py
src/document_ai/utils/: pdf2image.py
tests/unittests/: test_validate_arxiv.py
tests/unittests/data/: arxiv.json  arxiv_without_pdf.json
