[project]
name = "document-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jeremyarancio", email = "jeremyarancio@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "addict>=2.4.0",
    "easydict>=1.13",
    "einops>=0.8.2",
    "matplotlib>=3.10.8",
    "pillow>=12.1.0",
    "pypdfium2>=5.3.0",
    "requests>=2.32.5",
    "tokenizers==0.20.3",
    "torch==2.6.0",
    "torchvision>=0.21.0",
    "transformers==4.46.3",
]

[project.scripts]
document-ai = "document_ai:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
